# stylemimic

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.txt  clean.sh  docker-compose.yml  main.py  pyproject.toml  run.sh  utilities.py
stylemimic/: __init__.py  draft.py  learner.py  main.py  mistral.py  neodraft.py  utilities.py  validate_data.py  visualizer.py  wrangler.py
tests/: dummy.txt  test_learner.py
